# node-autoit-dlib-com

./: .gitignore  README.md  package-lock.json  package.json
autoit-dlib-com/: CMakeLists.txt  build.bat  hdr_parser.py  install.bat  project_build_steps.cmake
autoit-dlib-com/patches/: 001-cerr-error.patch  001-dlib-src.patch  001-opencv-src.patch
autoit-dlib-com/src/: autoit_bridge.cpp  autoit_bridge.h  autoit_bridge_common.cpp  autoit_bridge_common.h  autoit_def.h  dlibCOM.rc  dllmain.cpp  dllmain.h
autoit-dlib-com/src/binding/: base.cpp  base.h  basic.h  cca.cpp  cca.h  cnn_face_detector.cpp  cnn_face_detector.h  conversion.h  correlation_tracker.cpp  correlation_tracker.h  cv_image.h  cv_returns.cpp  cv_returns.h  dlib.cpp  face_recognition.cpp  face_recognition.h  global_optimization.cpp  global_optimization.h  gui.cpp  matrix.cpp  matrix.h  object_detection.cpp  object_detection.h  other.cpp  other.h  rectangles.cpp  sequence_segmenter.cpp  sequence_segmenter.h  serialize_object.h  shape_predictor.cpp  shape_predictor.h  simple_object_detector.h  svm_rank_trainer.cpp  svm_struct.cpp  svm_struct.h  vector_extra.cpp
autoit-dlib-com/src/dlib/: basic.cpp  basic.h  cca.cpp  cca.h  conversion.h  cv_image.h  cvdef.h  dlib.cpp  matrix_extra.cpp  matrix_extra.h  object_detection.cpp  other.cpp  other.h  rectangles.cpp  sequence_segmenter_extra.cpp  sequence_segmenter_extra.h  serialize_object.h  shape_predictor.h  simple_object_detector.h  svm_rank_trainer.cpp  svm_struct.cpp  svm_struct.h  vector_extra.cpp  vector_extra.h
autoit-dlib-com/test/: test.cpp  test.h
autoit-dlib-com/udf/: dlib_enums.au3  dlib_interface.au3  dlib_udf.au3  dlib_udf_utils.au3  docs.md  docs.txt
examples/: 01-face_detector.au3  02-face_landmark_detection.au3  03-opencv_webcam_face_detection.au3  cnn_face_detector.au3  correlation_tracker.au3  face_alignment.au3  face_clustering.au3  face_detector.au3  face_jitter.au3  face_landmark_detection.au3  face_recognition.au3  find_candidate_object_locations.au3  max_cost_assignment.au3  opencv_webcam_face_detection.au3  sequence_segmenter.au3  svm_binary_classifier.au3  svm_rank.au3  svm_struct.au3  train_object_detector.au3  train_shape_predictor.au3
examples/dlib/: cnn_face_detector.au3  correlation_tracker.au3  face_alignment.au3  face_clustering.au3  face_detector.au3  face_jitter.au3  face_landmark_detection.au3  face_recognition.au3  find_candidate_object_locations.au3  global_optimization.au3  max_cost_assignment.au3  opencv_webcam_face_detection.au3  sequence_segmenter.au3  svm_binary_classifier.au3  svm_rank.au3  svm_struct.au3  train_object_detector.au3  train_shape_predictor.au3
examples/pyimagesearch/: detect-eyes-nose-lips-jaw-dlib-opencv.au3  facial-landmarks-dlib-opencv-python.au3  facial-landmarks-dlib-opencv.au3
examples/test/: test_global_optimization.au3
opencv/: CMakeLists.txt
scripts/: build.js  manual.sh  test.js  version.js
src/: AutoItGenerator.js  CoClass.js  FunctionDeclaration.js  Properties.js  alias.js  constants.js  conversion.js  dependencies.js  gen.js  ids.json  map_conversion.js  vector_conversion.js
src/conversions/: decision_functions.js  svm_c_trainer.js
src/declarations/: Matrix.js  SpaceVector.js  cca.js  cnn_face_detector.js  correlation_tracker.js  cv.js  decision_functions.js  dlib.js  global_optimization.js  gui.js  image.js  image_dataset_metadata.js  line.js  object_detection.js  other.js  rectangles.js  sequence_segmenter.js  shape_predictor.js  svm_c_trainer.js  svm_rank_trainer.js  vector.js
